# SimpleTUI

./: CMakeLists.txt  SimpleTUI.sln  SimpleTUI.vcxproj  SimpleTUI.vcxproj.filters
Impl/Core/: DisplayMem.cxx  Screen.cxx  StUIDefinitions.cxx
Impl/Core/IO/Linux/: ConIO.cxx  IFD.cxx  IOListener.cxx  KeyData.cxx  TCPSocket.cxx
Impl/Ui/: UiControl.cxx
Test/: CMakeLists.txt  DevTest.cxx  DevTest.h
include/SimpleTUI/: Exports.h
include/SimpleTUI/Core/: DisplayMem.h  Screen.h  StUIDefinitions.h
include/SimpleTUI/Core/IO/Linux/: ConIO.h  IFD.h  IOListener.h  KeyData.h  TCPSocket.h
include/SimpleTUI/Ui/: UiControl.h
